# SKN30-4th-2Team

./: .gitignore  README.md
api/: .env.example  .env.local  .env.prod  README.md  main.py  pyproject.toml
api/app/: __init__.py  config.py  factory.py  lifespan.py
api/app/access_control/: __init__.py  dependencies.py
api/app/api/: __init__.py  router.py  system.py
api/app/chat/: __init__.py  schemas.py  service.py
api/app/common/: __init__.py  errors.py  exception_handlers.py  logging.py  request_id.py  responses.py
api/app/db/: __init__.py  base.py  database.py  dependencies.py  models.py
api/app/grounding/: __init__.py  schemas.py  service.py
api/app/idempotency/: __init__.py  service.py
api/app/llm/: dependencies.py
api/app/metadata/: __init__.py  schemas.py  service.py
api/app/review_sessions/: __init__.py  activity.py  domain.py  mapper.py  repository.py  schemas.py  service.py
api/app/reviews/: __init__.py  context.py  domain.py  mapper.py  repository.py  runner.py  schemas.py  service.py
api/app/security/: __init__.py  cookies.py  session_tokens.py
api/app/storage/: __init__.py  cleanup.py  dependencies.py  local.py  protocol.py
api/app/suggestions/: __init__.py  schemas.py  service.py
api/scripts/: generate_openapi.py
api/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_system.py
api/tests/access_control/: __init__.py  test_dependencies.py
api/tests/api_v1/: __init__.py  test_mvp_routes.py  test_session_review_routes.py
api/tests/common/: test_api_contract.py  test_logging.py
api/tests/db/: __init__.py  (+1 more)
(+59 files in other folders)
