[project]
name = "workshield-api"
version = "0.1.0"
description = "WorkShield 웹 애플리케이션의 API·LLM 오케스트레이션 계층"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-settings",
    "sse-starlette",
    "filetype",
    "mcp",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph",
    "langchain-openai",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
